--- a/css/main.css
+++ b/css/main.css
@@ -421,4 +421,50 @@ section.beating-heart h2::after {
 /* I love photography animation end */
 
 /* Slider start */
+.slick-slider h2 {
+    margin-bottom: 0;
+}
+
+.slider {
+    margin: 20px auto;
+    text-align: center;
+    padding: 20px;
+    color: white;
+}
+
+.slide {
+    max-height: 300px;
+    padding: 15px;
+}
+
+.slick-prev,
+.slick-next {
+    background: black;
+    width: 40px;
+    height: 40px;
+    z-index: 1;
+}
+
+.slick-prev {
+    left: 0;
+}
+
+.slick-next {
+    right: 0;
+}
+
+.slick-prev:hover,
+.slick-next:hover {
+    color: black;
+}
+
+.slick-dots li {
+    position: relative;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin: 0 5px;
+    color: white;
+    border-radius: 50%;
+}
 /* Slider end */
