--- a/css/main.css
+++ b/css/main.css
@@ -458,3 +458,29 @@ section.beating-heart h2::after {
     background: black;
 }
 /* Slider end */
+
+/* Footer start*/
+footer {
+    position: relative;
+    z-index: -2;
+    height: 150x;
+    background: black;
+    color: white;
+    font-size: 12px;
+    text-align: center;
+}
+
+footer h1 {
+    position: fixed;
+    font-size: 20px;
+    line-height: 25px;
+    color: white;
+    font-weight: bold;
+    text-align: center; 
+    bottom: 50px;
+    left: 50%;
+    transform: translate(-50%);
+    width: 800px;
+    z-index: 1;
+}
+/* Footer end*/
