--- a/css/main.css
+++ b/css/main.css
@@ -463,7 +463,7 @@ section.beating-heart h2::after {
 footer {
     position: relative;
     z-index: -2;
-    height: 150x;
+    height: 150px;
     background: black;
     color: white;
     font-size: 12px;
