--- a/css/main.css
+++ b/css/main.css
@@ -484,3 +484,41 @@ footer h1 {
     z-index: 1;
 }
 /* Footer end*/
+
+/* Responsive menu start*/
+@media only screen and (max-width: 768px) {
+    .menu-trigger {
+        background: url('../images/hamburger-icon.svg') no-repeat center / cover;
+        width: 35px;
+        height: 35px;
+        display: block;
+        z-index: 10;
+        position: absolute;
+        right: 10px;
+        top: 15px;
+    }
+
+    .main-overlay {
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        background: rgba(0,0,0,0.72);
+        z-index: 5;
+        display: none;
+    }
+
+    .main-overlay::after {
+        background: url(../images/close-icon.svg) no-repeat center / cover;
+        width: 35px;
+        height: 35px;
+        display: block;
+        content: "";
+        position: fixed;
+        top: 10px;
+        right: 10px;
+        z-index: 20;
+    }
+}
+/* Responsive menu end*/
