--- a/css/main.css
+++ b/css/main.css
@@ -520,5 +520,33 @@ footer h1 {
         right: 10px;
         z-index: 20;
     }
+
+    .menu {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        background: #131313;
+        width: 100%;
+        max-width: 300px;
+        z-index: 30;
+        transform: translate3d(-100%, 0, 0);
+    }
+
+    nav.nav-wrapper ul li {
+        display: block;
+        margin: 20px;
+        padding: 0;
+        padding-bottom: 20px;
+    }
+
+    nav.nav-wrapper ul li a {
+        font-size: 18px;
+        line-height: 23px;
+    }
+
+    nav.nav-wrapper ul li a:hover {
+        border-color: transparent;
+    }
 }
 /* Responsive menu end*/
