--- a/css/main.css
+++ b/css/main.css
@@ -506,6 +506,7 @@ footer h1 {
         bottom: 0;
         background: rgba(0,0,0,0.72);
         z-index: 5;
+        display: none;
     }
 
     .main-overlay::after {
@@ -530,6 +531,7 @@ footer h1 {
         max-width: 300px;
         z-index: 30;
         transform: translate3d(-100%, 0, 0);
+        transition: 0.3s;
     }
 
     nav.nav-wrapper ul li {
@@ -547,5 +549,18 @@ footer h1 {
     nav.nav-wrapper ul li a:hover {
         border-color: transparent;
     }
-}
+
+    body.menu-is-active .menu {
+        transform: translate3d(0,0,0);
+        display: block;
+        padding: 0 20px;
+    }
+
+    body.menu-is-active .main-overlay {
+        display: block;
+    }
+
+    body.menu-is-active .menu-trigger {
+        display: none;
+    }
 /* Responsive menu end*/
