--- a/css/main.css
+++ b/css/main.css
@@ -363,7 +363,7 @@ h2.sub-title::after {
     background: #000000;
     content: "";
     width: 100px;
-    margin: 30px auto 0 auto;                                                /* 30 on top, auto on left, 0 on bottom, auto on right */
+    margin: 30px auto 0 auto;                                                 /* 30 on top, auto on left, 0 on bottom, auto on right */
 }
 /* Masonry js styles end */
 
@@ -486,6 +486,78 @@ footer h1 {
 /* Footer end*/
 
 /* Responsive menu start*/
+@media only screen and (max-width: 1160px) {                                  /* laptop screens smaller than 1160px */
+    section.beating-heart span {
+        font-size: 30px;
+        line-height: 35px;
+    }
+
+    .heart {
+        width: 50px;
+        margin: 0 20px;
+    }
+}
+
+@media only screen and (max-width: 560px) {                                  /* laptop screens smaller than 1160px */
+    .ul#scene li.name {
+        font-size: 22x;
+        line-height: 27px;
+    }
+
+    .ul#scene li.title {
+        font-size: 20px;
+        line-height: 25px;
+        margin-top: 40px;
+    }
+
+    .btn {
+        margin-top: 80px;
+    }
+
+    .ul#scene {
+        margin-top: 50px;
+    }
+
+    .portfolio-btn,
+    .contact-btn {
+        display: block;                                                        /* Set to block as they are on mobile now (up and down) (inline for computer cause beside each other) */
+        margin: 20px auto;
+        max-width: 1200px;
+        font-size: 15px;
+        line-height: 20px;
+        padding: 10px 0;
+    }
+
+    .h2.sub-title {
+        margin: 30px auto;
+        font-size: 23px;
+        line-height: 28px;
+    }
+
+    .grid-item {
+        width: initial;
+    }
+
+    .tall-img {
+        height: initial;
+    }
+
+    section.beating-heart {
+        height: initial;
+    }
+
+    footer {
+        height: 100px;
+        font-size: 15px;
+        line-height: 20px;
+        bottom: 40px;
+    }
+
+    .menu {
+        max-width: 200px;
+    }
+}
+
 @media only screen and (max-width: 768px) {
     .menu-trigger {
         background: url('../images/hamburger-icon.svg') no-repeat center / cover;
@@ -563,4 +635,5 @@ footer h1 {
     body.menu-is-active .menu-trigger {
         display: none;
     }
+}
 /* Responsive menu end*/
