--- a/css/main.css
+++ b/css/main.css
@@ -203,7 +203,8 @@ ol li {
 .wrapper {
     max-width: 1100px;
     width: 200%;
-    margin: auto;
+    margin: 0 auto;
+    align-content: center;
 }
 
 /* Navigation bar + header style start */
