--- a/css/main.css
+++ b/css/main.css
@@ -202,7 +202,6 @@ ol li {
 
 .wrapper {
     max-width: 1100px;
-    width: 200%;
     margin: 0 auto;
     align-content: center;
 }
@@ -500,6 +499,10 @@ footer h1 {
 }
 
 @media only screen and (max-width: 560px) {                                  /* laptop screens smaller than 1160px */
+    .wrapper {
+
+    }
+
     .ul#scene li.name {
         font-size: 22x;
         line-height: 27px;
@@ -523,7 +526,7 @@ footer h1 {
     .contact-btn {
         display: block;                                                        /* Set to block as they are on mobile now (up and down) (inline for computer cause beside each other) */
         margin: 20px auto;
-        max-width: 1200px;
+        max-width: 120px;
         font-size: 15px;
         line-height: 20px;
         padding: 10px 0;
