--- a/css/main.css
+++ b/css/main.css
@@ -503,7 +503,7 @@ footer h1 {
     }
 
     .ul#scene li.name {
-        font-size: 22x;
+        font-size: 22px;
         line-height: 27px;
     }
 
