--- a/css/main.css
+++ b/css/main.css
@@ -541,6 +541,10 @@ footer h1 {
         transition: 0.3s;
     }
 
+    .nav-wrapper {
+        z-index: 5;
+    }
+
     nav.nav-wrapper ul li {
         display: block;
         margin: 20px;
